--- a/test/index.html
+++ b/test/index.html
@@ -124,7 +124,7 @@
             color:
             <select class="icon-color">
                 <option></option>
-                <option>green</option>
+                <option selected>green</option>
                 <option>red</option>
                 <option>blue</option>
             </select>
