--- a/test/index.html
+++ b/test/index.html
@@ -77,14 +77,14 @@
 
         .icon-item {
             display: block;
-            margin: 5px 5px;
-            opacity: 0.8;
             cursor: pointer;
             float: left;
+            border: 1px solid transparent;
+            padding: 4px 4px;
         }
 
         .icon-item:hover {
-            opacity: 1;
+            border: 1px solid #ccc;
         }
 
         .icon-item-svg svg {
@@ -105,11 +105,12 @@
     <script src="dist/my-icons.js"></script>
     <script src="dist/digital-numbers.js"></script>
     <script src="dist/type-icons.js"></script>
+    <script src="dist/tiny-icons.js"></script>
 </head>
 
 <body>
     <div class="preview-head">
-        <div class="preview-title">Preview icons</div>
+        <div class="preview-title">Preview svg minifier icons</div>
         <div class="preview-toolbar">
             size:
             <select class="icon-size">
@@ -143,12 +144,11 @@
     <div class="preview-body">
         <div class="preview-container"></div>
     </div>
-    <!-- test reload -->
-    <script src="dist/my-icons.js"></script>
+    
     <script>
         const $container = document.querySelector('.preview-container');
 
-        const list = ['my-icons', 'digital-numbers', 'type-icons'];
+        const list = ['my-icons', 'digital-numbers', 'type-icons', 'tiny-icons'];
 
         const render = function() {
 
@@ -163,18 +163,21 @@
                 const metadata = pkg.default;
                 console.log(metadata);
 
+                const icons = metadata.icons;
+        
                 const $group = document.createElement('div');
                 $group.className = 'icon-group';
-                $group.innerHTML = `<h3>${item} (${metadata.icons.length})</h3>`;
+                $group.innerHTML = `<h3>${item} (${icons.length})</h3>`;
                 $container.appendChild($group);
 
-                metadata.icons.forEach(function(icon) {
+                icons.forEach(function(icon) {
                     const div = document.createElement('div');
                     div.title = icon.name;
                     div.className = 'icon-item';
                     div.style.cssText = `width:${size};`;
 
-                    const children = [`<div class="icon-item-svg" style="height:${size};color:${color};background:${bg};">${icon.svg}</div>`];
+                    const style = `height:${size};color:${color};background:${bg};`;
+                    const children = [`<div class="icon-item-svg" style="${style}">${icon.svg}</div>`];
                     if (parseInt(size) >= 64) {
                         children.push(`<div class="icon-item-name">${icon.name}</div>`);
                     }
@@ -182,46 +185,9 @@
                     $group.appendChild(div);
                 });
 
-                //symbol
-                if (item === 'type-icons') {
-                    return;
-                }
-                const symbol = pkg.getSvgSymbol();
-                const $symbol = document.createElement('div');
-                $symbol.style.display = 'none';
-                $symbol.innerHTML = symbol;
-                $container.appendChild($symbol);
-
-                const $groupSymbol = document.createElement('div');
-                $groupSymbol.className = 'icon-group icon-group-symbol';
-                $groupSymbol.innerHTML = `<h3>${item} (symbol)</h3>`;
-                $container.appendChild($groupSymbol);
-
-                metadata.icons.forEach(function(icon) {
-                    const div = document.createElement('div');
-                    div.title = icon.name;
-                    div.className = 'icon-item';
-                    div.style.cssText = `width:${size};`;
-
-                    const children = [
-                        `<div class="icon-item-svg" style="height:${size};color:${color};background:${bg};">
-                            <svg pointer-events="none" width="100%" height="100%">
-                                <use xlink:href="#${icon.namespace}" />
-                            </svg>
-                        </div>`
-                    ];
-                    if (parseInt(size) >= 64) {
-                        children.push(`<div class="icon-item-name">${icon.name}</div>`);
-                    }
-                    div.innerHTML = children.join('');
-                    $groupSymbol.appendChild(div);
-                });
-
-
             });
 
         };
-
 
         const toolbars = ['.icon-size', '.icon-color', '.icon-bg'];
         toolbars.forEach(function(item) {
@@ -234,6 +200,9 @@
         render();
 
     </script>
+
+    <!-- test reload -->
+    <script src="dist/my-icons.js"></script>
 </body>
 
 </html>
